Deleted Images to Update

--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "mf = Mftool()\n",
     "\n",
-    "equity = [\"0P0000XW4O\", \"0P0000XW4V\", \"0P0000XVJR\", \"0P0000XVB8\"]\n",
+    "equity = [\"0P0000XW4O\", \"0P0000XW4V\", \"0P0000XVJR\"]\n",
     "debt = []\n",
     "hybrid = []\n",
     "temp_list = []\n",
