--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n"
@@ -21,14 +27,159 @@
     "\n",
     "mf = Mftool()\n",
     "\n",
-    "equity = [\"0P0000XW51\", \"0P0000XW4V\", \"0P0000XW4E\"]\n",
-    "debt = []\n",
-    "hybrid = []\n",
-    "temp_list = []\n",
-    "for fund in equity:\n",
-    "    temp_list.append(mf.history(fund,start='2018-08-29',end='2023-08-29',as_dataframe=True))\n",
+    "equity = {\"0P00012ALS\": \"Motilal Oswal Midcap 30 Direct Growth\",\n",
+    "          \"0P0000XW4J\": \"Quant Small Cap Fund Growth Option Direct Plan\",\n",
+    "          \"0P0000XW51\": \"Quant Tax Plan Growth Option Direct Plan\"}\n",
+    "debt = {\"0P0000XUXV\": \"ICICI Prudential Gilt Fund Direct Plan Growth\",\n",
+    "        \"0P0000K1C8\": \"PGIM India Gilt Fund Growth\",\n",
+    "        \"0P0000XVBF\": \"PGIM India Dynamic Bond Fund Direct Plan Growth Option\"}\n",
+    "hybrid = {\"0P00014MH9\":\"Kotak Equity Hybrid Fund - Direct Plan - Growth\",\n",
+    "          \"0P0000XW46\":\"Edelweiss Aggressive Hybrid -Direct Plan-Growth Option\",\n",
+    "          \"0P0000XZRU\": \"Kotak Debt Hybrid Direct Growth\"}\n",
+    "temp_list1 = []\n",
+    "temp_list2 = []\n",
+    "temp_list3 = []\n",
+    "for key in equity:\n",
+    "    temp_list1.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))\n",
+    "    \n",
+    "for key in debt:\n",
+    "    temp_list2.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))\n",
     "\n",
-    "equity_dfs = dict(zip(equity, temp_list))"
+    "for key in hybrid:\n",
+    "    temp_list3.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))   \n",
+    "equity_dfs = dict(zip(equity, temp_list1))\n",
+    "debt_dfs = dict(zip(equity, temp_list2))\n",
+    "hybrid_dfs = dict(zip(hybrid, temp_list3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nav</th>\n",
+       "      <th>dayChange</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29-08-2018</th>\n",
+       "      <td>10.2686</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-08-2018</th>\n",
+       "      <td>10.2693</td>\n",
+       "      <td>0.000700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31-08-2018</th>\n",
+       "      <td>10.2709</td>\n",
+       "      <td>0.001599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03-09-2018</th>\n",
+       "      <td>10.2763</td>\n",
+       "      <td>0.005401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>04-09-2018</th>\n",
+       "      <td>10.2721</td>\n",
+       "      <td>-0.004200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22-08-2023</th>\n",
+       "      <td>11.4358</td>\n",
+       "      <td>0.002500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23-08-2023</th>\n",
+       "      <td>11.4432</td>\n",
+       "      <td>0.007401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24-08-2023</th>\n",
+       "      <td>11.4461</td>\n",
+       "      <td>0.002900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-08-2023</th>\n",
+       "      <td>11.4447</td>\n",
+       "      <td>-0.001400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28-08-2023</th>\n",
+       "      <td>11.4574</td>\n",
+       "      <td>0.012700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1208 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                nav  dayChange\n",
+       "date                          \n",
+       "29-08-2018  10.2686        NaN\n",
+       "30-08-2018  10.2693   0.000700\n",
+       "31-08-2018  10.2709   0.001599\n",
+       "03-09-2018  10.2763   0.005401\n",
+       "04-09-2018  10.2721  -0.004200\n",
+       "...             ...        ...\n",
+       "22-08-2023  11.4358   0.002500\n",
+       "23-08-2023  11.4432   0.007401\n",
+       "24-08-2023  11.4461   0.002900\n",
+       "25-08-2023  11.4447  -0.001400\n",
+       "28-08-2023  11.4574   0.012700\n",
+       "\n",
+       "[1208 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mf.history(\"0P0001B9S8\",start='2018-08-29',end='2023-08-29',as_dataframe=True)"
    ]
   },
   {
@@ -156,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1229, 2)\n",
       "(1228, 2)\n",
-      "(1228, 2)\n",
-      "(1229, 2)\n"
+      "(1228, 2)\n"
      ]
     }
    ],
@@ -188,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,18 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8344\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8344\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8344\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n"
      ]
     }
@@ -230,13 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'0P0000XW51':            date         nav\n",
+       "{'0P0000XW4J':            date         nav\n",
+       " 0    2018-08-29   52.583500\n",
+       " 1    2018-08-30   52.462700\n",
+       " 2    2018-08-31   52.477299\n",
+       " 3    2018-09-03   52.271099\n",
+       " 4    2018-09-04   51.953800\n",
+       " ...         ...         ...\n",
+       " 1224 2023-08-22  189.257706\n",
+       " 1225 2023-08-23  190.408997\n",
+       " 1226 2023-08-24  189.705002\n",
+       " 1227 2023-08-25  188.326996\n",
+       " 1228 2023-08-28  190.143707\n",
+       " \n",
+       " [1229 rows x 2 columns],\n",
+       " '0P0000XW51':            date         nav\n",
        " 0    2018-08-29   98.234497\n",
        " 1    2018-08-30   98.169800\n",
        " 2    2018-08-31   98.613503\n",
@@ -250,37 +415,23 @@
        " 1227 2023-08-28  289.943512\n",
        " \n",
        " [1228 rows x 2 columns],\n",
-       " '0P0000XW4V':            date         nav\n",
-       " 0    2018-08-29   60.523399\n",
-       " 1    2018-08-30   60.518700\n",
-       " 2    2018-08-31   60.759701\n",
-       " 3    2018-09-03   60.364899\n",
-       " 4    2018-09-04   59.703499\n",
+       " '0P0000PTGR':            date         nav\n",
+       " 0    2018-08-29   44.335499\n",
+       " 1    2018-08-30   44.680901\n",
+       " 2    2018-08-31   44.976601\n",
+       " 3    2018-09-03   45.097900\n",
+       " 4    2018-09-04   44.359501\n",
        " ...         ...         ...\n",
-       " 1223 2023-08-22  172.451706\n",
-       " 1224 2023-08-23  172.381699\n",
-       " 1225 2023-08-24  171.318497\n",
-       " 1226 2023-08-25  170.410294\n",
-       " 1227 2023-08-28  171.585999\n",
+       " 1223 2023-08-22  117.790604\n",
+       " 1224 2023-08-23  118.442497\n",
+       " 1225 2023-08-24  118.184303\n",
+       " 1226 2023-08-25  118.073502\n",
+       " 1227 2023-08-28  118.742996\n",
        " \n",
-       " [1228 rows x 2 columns],\n",
-       " '0P0000XW4E':            date         nav\n",
-       " 0    2018-08-29  188.692993\n",
-       " 1    2018-08-30  189.229004\n",
-       " 2    2018-08-31  190.432007\n",
-       " 3    2018-09-03  188.688004\n",
-       " 4    2018-09-04  186.449005\n",
-       " ...         ...         ...\n",
-       " 1224 2023-08-22  526.297302\n",
-       " 1225 2023-08-23  529.070679\n",
-       " 1226 2023-08-24  526.710999\n",
-       " 1227 2023-08-25  524.461914\n",
-       " 1228 2023-08-28  527.810730\n",
-       " \n",
-       " [1229 rows x 2 columns]}"
+       " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,13 +454,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'0P0000XW51':            date       nav_1\n",
+       "{'0P0000XW4J':            date       nav_1\n",
+       " 0    2018-08-29   52.583500\n",
+       " 1    2018-08-30   52.462700\n",
+       " 2    2018-08-31   52.477299\n",
+       " 3    2018-09-03   52.271099\n",
+       " 4    2018-09-04   51.953800\n",
+       " ...         ...         ...\n",
+       " 1224 2023-08-22  189.257706\n",
+       " 1225 2023-08-23  190.408997\n",
+       " 1226 2023-08-24  189.705002\n",
+       " 1227 2023-08-25  188.326996\n",
+       " 1228 2023-08-28  190.143707\n",
+       " \n",
+       " [1229 rows x 2 columns],\n",
+       " '0P0000XW51':            date       nav_2\n",
        " 0    2018-08-29   98.234497\n",
        " 1    2018-08-30   98.169800\n",
        " 2    2018-08-31   98.613503\n",
@@ -323,37 +488,23 @@
        " 1227 2023-08-28  289.943512\n",
        " \n",
        " [1228 rows x 2 columns],\n",
-       " '0P0000XW4V':            date       nav_2\n",
-       " 0    2018-08-29   60.523399\n",
-       " 1    2018-08-30   60.518700\n",
-       " 2    2018-08-31   60.759701\n",
-       " 3    2018-09-03   60.364899\n",
-       " 4    2018-09-04   59.703499\n",
+       " '0P0000PTGR':            date       nav_3\n",
+       " 0    2018-08-29   44.335499\n",
+       " 1    2018-08-30   44.680901\n",
+       " 2    2018-08-31   44.976601\n",
+       " 3    2018-09-03   45.097900\n",
+       " 4    2018-09-04   44.359501\n",
        " ...         ...         ...\n",
-       " 1223 2023-08-22  172.451706\n",
-       " 1224 2023-08-23  172.381699\n",
-       " 1225 2023-08-24  171.318497\n",
-       " 1226 2023-08-25  170.410294\n",
-       " 1227 2023-08-28  171.585999\n",
+       " 1223 2023-08-22  117.790604\n",
+       " 1224 2023-08-23  118.442497\n",
+       " 1225 2023-08-24  118.184303\n",
+       " 1226 2023-08-25  118.073502\n",
+       " 1227 2023-08-28  118.742996\n",
        " \n",
-       " [1228 rows x 2 columns],\n",
-       " '0P0000XW4E':            date       nav_3\n",
-       " 0    2018-08-29  188.692993\n",
-       " 1    2018-08-30  189.229004\n",
-       " 2    2018-08-31  190.432007\n",
-       " 3    2018-09-03  188.688004\n",
-       " 4    2018-09-04  186.449005\n",
-       " ...         ...         ...\n",
-       " 1224 2023-08-22  526.297302\n",
-       " 1225 2023-08-23  529.070679\n",
-       " 1226 2023-08-24  526.710999\n",
-       " 1227 2023-08-25  524.461914\n",
-       " 1228 2023-08-28  527.810730\n",
-       " \n",
-       " [1229 rows x 2 columns]}"
+       " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,19 +523,19 @@
      "output_type": "stream",
      "text": [
       "           date       nav_1       nav_2       nav_3\n",
-      "0    2018-08-29   98.234497   60.523399  188.692993\n",
-      "1    2018-08-30   98.169800   60.518700  189.229004\n",
-      "2    2018-08-31   98.613503   60.759701  190.432007\n",
-      "3    2018-09-03   97.612396   60.364899  188.688004\n",
-      "4    2018-09-04   96.152702   59.703499  186.449005\n",
+      "0    2018-08-29   52.583500   98.234497   44.335499\n",
+      "1    2018-08-30   52.462700   98.169800   44.680901\n",
+      "2    2018-08-31   52.477299   98.613503   44.976601\n",
+      "3    2018-09-03   52.271099   97.612396   45.097900\n",
+      "4    2018-09-04   51.953800   96.152702   44.359501\n",
       "...         ...         ...         ...         ...\n",
-      "1223 2023-08-22  292.064392  172.451706  526.297302\n",
-      "1224 2023-08-23  292.571686  172.381699  529.070679\n",
-      "1225 2023-08-24  291.222107  171.318497  526.710999\n",
-      "1226 2023-08-25  288.174591  170.410294  524.461914\n",
-      "1227 2023-08-28  289.943512  171.585999  527.810730\n",
+      "1224 2023-08-22  189.257706  292.064392  117.790604\n",
+      "1225 2023-08-23  190.408997  292.571686  118.442497\n",
+      "1226 2023-08-24  189.705002  291.222107  118.184303\n",
+      "1227 2023-08-25  188.326996  288.174591  118.073502\n",
+      "1228 2023-08-28  190.143707  289.943512  118.742996\n",
       "\n",
-      "[1228 rows x 4 columns]\n"
+      "[1229 rows x 4 columns]\n"
      ]
     }
    ],
