--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -27,26 +27,38 @@
     "\n",
     "mf = Mftool()\n",
     "\n",
-    "equity = {\"0P00012ALS\": \"Motilal Oswal Midcap 30 Direct Growth\",\n",
-    "          \"0P0000XW4J\": \"Quant Small Cap Fund Growth Option Direct Plan\",\n",
-    "          \"0P0000XW51\": \"Quant Tax Plan Growth Option Direct Plan\"}\n",
-    "debt = {\"0P0000XUXV\": \"ICICI Prudential Gilt Fund Direct Plan Growth\",\n",
-    "        \"0P0000K1C8\": \"PGIM India Gilt Fund Growth\",\n",
-    "        \"0P0000XVBF\": \"PGIM India Dynamic Bond Fund Direct Plan Growth Option\"}\n",
-    "hybrid = {\"0P00014MH9\":\"Kotak Equity Hybrid Fund - Direct Plan - Growth\",\n",
-    "          \"0P0000XW46\":\"Edelweiss Aggressive Hybrid -Direct Plan-Growth Option\",\n",
-    "          \"0P0000XZRU\": \"Kotak Debt Hybrid Direct Growth\"}\n",
+    "equity = {\n",
+    "    \"0P00012ALS\": \"Motilal Oswal Midcap 30 Direct Growth\",\n",
+    "    \"0P0000XW4J\": \"Quant Small Cap Fund Growth Option Direct Plan\",\n",
+    "    \"0P0000XW51\": \"Quant Tax Plan Growth Option Direct Plan\",\n",
+    "}\n",
+    "debt = {\n",
+    "    \"0P0000XUXV\": \"ICICI Prudential Gilt Fund Direct Plan Growth\",\n",
+    "    \"0P0000K1C8\": \"PGIM India Gilt Fund Growth\",\n",
+    "    \"0P0000XVBF\": \"PGIM India Dynamic Bond Fund Direct Plan Growth Option\",\n",
+    "}\n",
+    "hybrid = {\n",
+    "    \"0P00014MH9\": \"Kotak Equity Hybrid Fund - Direct Plan - Growth\",\n",
+    "    \"0P0000XW46\": \"Edelweiss Aggressive Hybrid -Direct Plan-Growth Option\",\n",
+    "    \"0P0000XZRU\": \"Kotak Debt Hybrid Direct Growth\",\n",
+    "}\n",
     "temp_list1 = []\n",
     "temp_list2 = []\n",
     "temp_list3 = []\n",
     "for key in equity:\n",
-    "    temp_list1.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))\n",
-    "    \n",
+    "    temp_list1.append(\n",
+    "        mf.history(key, start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)\n",
+    "    )\n",
+    "\n",
     "for key in debt:\n",
-    "    temp_list2.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))\n",
+    "    temp_list2.append(\n",
+    "        mf.history(key, start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)\n",
+    "    )\n",
     "\n",
     "for key in hybrid:\n",
-    "    temp_list3.append(mf.history(key,start='2018-08-29',end='2023-08-29',as_dataframe=True))   \n",
+    "    temp_list3.append(\n",
+    "        mf.history(key, start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)\n",
+    "    )\n",
     "equity_dfs = dict(zip(equity, temp_list1))\n",
     "debt_dfs = dict(zip(equity, temp_list2))\n",
     "hybrid_dfs = dict(zip(hybrid, temp_list3))"
@@ -54,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -97,28 +109,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>29-08-2018</th>\n",
-       "      <td>10.2686</td>\n",
+       "      <td>29.691700</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-08-2018</th>\n",
-       "      <td>10.2693</td>\n",
-       "      <td>0.000700</td>\n",
+       "      <td>29.525900</td>\n",
+       "      <td>-0.165800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31-08-2018</th>\n",
-       "      <td>10.2709</td>\n",
-       "      <td>0.001599</td>\n",
+       "      <td>29.381001</td>\n",
+       "      <td>-0.144899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>03-09-2018</th>\n",
-       "      <td>10.2763</td>\n",
-       "      <td>0.005401</td>\n",
+       "      <td>29.109699</td>\n",
+       "      <td>-0.271301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>04-09-2018</th>\n",
-       "      <td>10.2721</td>\n",
-       "      <td>-0.004200</td>\n",
+       "      <td>28.579201</td>\n",
+       "      <td>-0.530499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -127,182 +139,123 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22-08-2023</th>\n",
-       "      <td>11.4358</td>\n",
-       "      <td>0.002500</td>\n",
+       "      <td>66.828499</td>\n",
+       "      <td>0.524200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23-08-2023</th>\n",
-       "      <td>11.4432</td>\n",
-       "      <td>0.007401</td>\n",
+       "      <td>67.223602</td>\n",
+       "      <td>0.395103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24-08-2023</th>\n",
-       "      <td>11.4461</td>\n",
-       "      <td>0.002900</td>\n",
+       "      <td>67.724403</td>\n",
+       "      <td>0.500801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-08-2023</th>\n",
-       "      <td>11.4447</td>\n",
-       "      <td>-0.001400</td>\n",
+       "      <td>67.555901</td>\n",
+       "      <td>-0.168503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28-08-2023</th>\n",
-       "      <td>11.4574</td>\n",
-       "      <td>0.012700</td>\n",
+       "      <td>67.385498</td>\n",
+       "      <td>-0.170403</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1208 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                nav  dayChange\n",
-       "date                          \n",
-       "29-08-2018  10.2686        NaN\n",
-       "30-08-2018  10.2693   0.000700\n",
-       "31-08-2018  10.2709   0.001599\n",
-       "03-09-2018  10.2763   0.005401\n",
-       "04-09-2018  10.2721  -0.004200\n",
-       "...             ...        ...\n",
-       "22-08-2023  11.4358   0.002500\n",
-       "23-08-2023  11.4432   0.007401\n",
-       "24-08-2023  11.4461   0.002900\n",
-       "25-08-2023  11.4447  -0.001400\n",
-       "28-08-2023  11.4574   0.012700\n",
-       "\n",
-       "[1208 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mf.history(\"0P0001B9S8\",start='2018-08-29',end='2023-08-29',as_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nav</th>\n",
-       "      <th>dayChange</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29-08-2018</th>\n",
-       "      <td>56.935200</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-08-2018</th>\n",
-       "      <td>57.033798</td>\n",
-       "      <td>0.098598</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31-08-2018</th>\n",
-       "      <td>57.325100</td>\n",
-       "      <td>0.291302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03-09-2018</th>\n",
-       "      <td>57.248798</td>\n",
-       "      <td>-0.076302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>04-09-2018</th>\n",
-       "      <td>56.075699</td>\n",
-       "      <td>-1.173100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21-11-2022</th>\n",
-       "      <td>89.631599</td>\n",
-       "      <td>-0.145004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22-11-2022</th>\n",
-       "      <td>89.263199</td>\n",
-       "      <td>-0.368401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23-11-2022</th>\n",
-       "      <td>89.737701</td>\n",
-       "      <td>0.474503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24-11-2022</th>\n",
-       "      <td>90.252701</td>\n",
-       "      <td>0.514999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-11-2022</th>\n",
-       "      <td>90.736801</td>\n",
-       "      <td>0.484100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1022 rows × 2 columns</p>\n",
+       "<p>1229 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                  nav  dayChange\n",
        "date                            \n",
-       "29-08-2018  56.935200        NaN\n",
-       "30-08-2018  57.033798   0.098598\n",
-       "31-08-2018  57.325100   0.291302\n",
-       "03-09-2018  57.248798  -0.076302\n",
-       "04-09-2018  56.075699  -1.173100\n",
+       "29-08-2018  29.691700        NaN\n",
+       "30-08-2018  29.525900  -0.165800\n",
+       "31-08-2018  29.381001  -0.144899\n",
+       "03-09-2018  29.109699  -0.271301\n",
+       "04-09-2018  28.579201  -0.530499\n",
        "...               ...        ...\n",
-       "21-11-2022  89.631599  -0.145004\n",
-       "22-11-2022  89.263199  -0.368401\n",
-       "23-11-2022  89.737701   0.474503\n",
-       "24-11-2022  90.252701   0.514999\n",
-       "25-11-2022  90.736801   0.484100\n",
+       "22-08-2023  66.828499   0.524200\n",
+       "23-08-2023  67.223602   0.395103\n",
+       "24-08-2023  67.724403   0.500801\n",
+       "25-08-2023  67.555901  -0.168503\n",
+       "28-08-2023  67.385498  -0.170403\n",
        "\n",
-       "[1022 rows x 2 columns]"
+       "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equity_dfs['0P0000XW9N']"
+    "mf.history(\"0P00012ALS\", start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0P00012ALS':                   nav  dayChange\n",
+       " date                            \n",
+       " 29-08-2018  29.691700        NaN\n",
+       " 30-08-2018  29.525900  -0.165800\n",
+       " 31-08-2018  29.381001  -0.144899\n",
+       " 03-09-2018  29.109699  -0.271301\n",
+       " 04-09-2018  28.579201  -0.530499\n",
+       " ...               ...        ...\n",
+       " 22-08-2023  66.828499   0.524200\n",
+       " 23-08-2023  67.223602   0.395103\n",
+       " 24-08-2023  67.724403   0.500801\n",
+       " 25-08-2023  67.555901  -0.168503\n",
+       " 28-08-2023  67.385498  -0.170403\n",
+       " \n",
+       " [1229 rows x 2 columns],\n",
+       " '0P0000XW4J':                    nav  dayChange\n",
+       " date                             \n",
+       " 29-08-2018   52.583500        NaN\n",
+       " 30-08-2018   52.462700  -0.120800\n",
+       " 31-08-2018   52.477299   0.014599\n",
+       " 03-09-2018   52.271099  -0.206200\n",
+       " 04-09-2018   51.953800  -0.317299\n",
+       " ...                ...        ...\n",
+       " 22-08-2023  189.257706   1.286011\n",
+       " 23-08-2023  190.408997   1.151291\n",
+       " 24-08-2023  189.705002  -0.703995\n",
+       " 25-08-2023  188.326996  -1.378006\n",
+       " 28-08-2023  190.143707   1.816711\n",
+       " \n",
+       " [1229 rows x 2 columns],\n",
+       " '0P0000XW51':                    nav  dayChange\n",
+       " date                             \n",
+       " 29-08-2018   98.234497        NaN\n",
+       " 30-08-2018   98.169800  -0.064697\n",
+       " 31-08-2018   98.613503   0.443703\n",
+       " 03-09-2018   97.612396  -1.001106\n",
+       " 04-09-2018   96.152702  -1.459694\n",
+       " ...                ...        ...\n",
+       " 22-08-2023  292.064392   1.079803\n",
+       " 23-08-2023  292.571686   0.507294\n",
+       " 24-08-2023  291.222107  -1.349579\n",
+       " 25-08-2023  288.174591  -3.047516\n",
+       " 28-08-2023  289.943512   1.768921\n",
+       " \n",
+       " [1228 rows x 2 columns]}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equity_dfs"
    ]
   },
   {
@@ -313,7 +266,7 @@
    "source": [
     "for fund in equity:\n",
     "    equity_dfs[fund].reset_index(inplace=True)\n",
-    "    equity_dfs[fund].drop(columns='dayChange',inplace=True)\n",
+    "    equity_dfs[fund].drop(columns=\"dayChange\", inplace=True)\n",
     "    equity_dfs[fund].dropna()"
    ]
   },
@@ -343,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = equity_dfs\n"
+    "temp_df = equity_dfs"
    ]
   },
   {
@@ -446,10 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i=1\n",
+    "i = 1\n",
     "for df in temp_df.values():\n",
-    "    df.rename(columns={'nav':f\"nav_{i}\"},inplace=True)\n",
-    "    i+=1"
+    "    df.rename(columns={\"nav\": f\"nav_{i}\"}, inplace=True)\n",
+    "    i += 1"
    ]
   },
   {
@@ -540,16 +493,16 @@
     }
    ],
    "source": [
-    "merge_df=pd.DataFrame()\n",
+    "merge_df = pd.DataFrame()\n",
     "\n",
-    "for df in temp_df.values(): \n",
+    "for df in temp_df.values():\n",
     "    if merge_df.empty:\n",
-    "        merge_df=df\n",
+    "        merge_df = df\n",
     "    else:\n",
-    "        merge_df=pd.merge(merge_df,df,on='date',how='left')    \n",
-    "        \n",
-    "        \n",
-    "print(merge_df)        "
+    "        merge_df = pd.merge(merge_df, df, on=\"date\", how=\"left\")\n",
+    "\n",
+    "\n",
+    "print(merge_df)"
    ]
   },
   {
@@ -667,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_df=pd.read_csv(\".//data_in//^NSEI.csv\")"
+    "index_df = pd.read_csv(\".//data_in//^NSEI.csv\")"
    ]
   },
   {
@@ -676,8 +629,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_df.drop(columns=['Open','High','Low','Adj Close','Volume'],inplace=True)\n",
-    "index_df['Date']=pd.to_datetime(index_df['Date'])"
+    "index_df.drop(columns=[\"Open\", \"High\", \"Low\", \"Adj Close\", \"Volume\"], inplace=True)\n",
+    "index_df[\"Date\"] = pd.to_datetime(index_df[\"Date\"])"
    ]
   },
   {
@@ -846,8 +799,8 @@
     }
    ],
    "source": [
-    "i=1\n",
-    "for i in range(1,4):\n",
+    "i = 1\n",
+    "for i in range(1, 4):\n",
     "    print(merge_df[f\"nav_{i}\"])"
    ]
   },
@@ -857,10 +810,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i=1\n",
-    "for i in range(1,4):\n",
-    "    merge_df[f\"nav_{i}\"]=(merge_df[f\"nav_{i}\"]/merge_df[f\"nav_{i}\"][0])*100\n",
-    "index_df['Close_nrml']= (index_df['Close']/index_df['Close'][0])*100"
+    "i = 1\n",
+    "for i in range(1, 4):\n",
+    "    merge_df[f\"nav_{i}\"] = (merge_df[f\"nav_{i}\"] / merge_df[f\"nav_{i}\"][0]) * 100\n",
+    "index_df[\"Close_nrml\"] = (index_df[\"Close\"] / index_df[\"Close\"][0]) * 100"
    ]
   },
   {
@@ -1011,7 +964,7 @@
    "outputs": [],
    "source": [
     "merge_df.to_csv(\"check.csv\")\n",
-    "index_df.to_csv('index.csv')"
+    "index_df.to_csv(\"index.csv\")"
    ]
   },
   {
@@ -1020,8 +973,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#merge_df['avg']=(merge_df['nav_1'] + merge_df['nav_2'] + merge_df['nav_3'] + merge_df['nav_4'] + merge_df['nav_5'])/5\n",
-    "merge_df['avg']=merge_df[['nav_1','nav_2','nav_3']].mean(axis=1)"
+    "# merge_df['avg']=(merge_df['nav_1'] + merge_df['nav_2'] + merge_df['nav_3'] + merge_df['nav_4'] + merge_df['nav_5'])/5\n",
+    "merge_df[\"avg\"] = merge_df[[\"nav_1\", \"nav_2\", \"nav_3\"]].mean(axis=1)"
    ]
   },
   {
