--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -60,143 +60,13 @@
     "        mf.history(key, start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)\n",
     "    )\n",
     "equity_dfs = dict(zip(equity, temp_list1))\n",
-    "debt_dfs = dict(zip(equity, temp_list2))\n",
+    "debt_dfs = dict(zip(debt, temp_list2))\n",
     "hybrid_dfs = dict(zip(hybrid, temp_list3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nav</th>\n",
-       "      <th>dayChange</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29-08-2018</th>\n",
-       "      <td>29.691700</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-08-2018</th>\n",
-       "      <td>29.525900</td>\n",
-       "      <td>-0.165800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31-08-2018</th>\n",
-       "      <td>29.381001</td>\n",
-       "      <td>-0.144899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03-09-2018</th>\n",
-       "      <td>29.109699</td>\n",
-       "      <td>-0.271301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>04-09-2018</th>\n",
-       "      <td>28.579201</td>\n",
-       "      <td>-0.530499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22-08-2023</th>\n",
-       "      <td>66.828499</td>\n",
-       "      <td>0.524200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23-08-2023</th>\n",
-       "      <td>67.223602</td>\n",
-       "      <td>0.395103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24-08-2023</th>\n",
-       "      <td>67.724403</td>\n",
-       "      <td>0.500801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-08-2023</th>\n",
-       "      <td>67.555901</td>\n",
-       "      <td>-0.168503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28-08-2023</th>\n",
-       "      <td>67.385498</td>\n",
-       "      <td>-0.170403</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1229 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  nav  dayChange\n",
-       "date                            \n",
-       "29-08-2018  29.691700        NaN\n",
-       "30-08-2018  29.525900  -0.165800\n",
-       "31-08-2018  29.381001  -0.144899\n",
-       "03-09-2018  29.109699  -0.271301\n",
-       "04-09-2018  28.579201  -0.530499\n",
-       "...               ...        ...\n",
-       "22-08-2023  66.828499   0.524200\n",
-       "23-08-2023  67.223602   0.395103\n",
-       "24-08-2023  67.724403   0.500801\n",
-       "25-08-2023  67.555901  -0.168503\n",
-       "28-08-2023  67.385498  -0.170403\n",
-       "\n",
-       "[1229 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mf.history(\"0P00012ALS\", start=\"2018-08-29\", end=\"2023-08-29\", as_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +119,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,19 +130,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for fund in equity:\n",
-    "    equity_dfs[fund].reset_index(inplace=True)\n",
-    "    equity_dfs[fund].drop(columns=\"dayChange\", inplace=True)\n",
-    "    equity_dfs[fund].dropna()"
+    "for key in equity:\n",
+    "    equity_dfs[key].reset_index(inplace=True)\n",
+    "    equity_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
+    "    equity_dfs[key].dropna()\n",
+    "\n",
+    "for key in debt:\n",
+    "    debt_dfs[key].reset_index(inplace=True)\n",
+    "    debt_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
+    "    debt_dfs[key].dropna()\n",
+    "\n",
+    "for key in hybrid:\n",
+    "    hybrid_dfs[key].reset_index(inplace=True)\n",
+    "    hybrid_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
+    "    hybrid_dfs[key].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -280,46 +160,99 @@
      "output_type": "stream",
      "text": [
       "(1229, 2)\n",
+      "(1229, 2)\n",
       "(1228, 2)\n",
-      "(1228, 2)\n"
+      "(1208, 2)\n",
+      "(1208, 2)\n",
+      "(1208, 2)\n",
+      "(1229, 2)\n",
+      "(1229, 2)\n",
+      "(1209, 2)\n"
      ]
     }
    ],
    "source": [
-    "for fund in equity:\n",
-    "    print(equity_dfs[fund].shape)"
+    "for key in equity:\n",
+    "    print(equity_dfs[key].shape)\n",
+    "for key in debt:\n",
+    "    print(debt_dfs[key].shape)\n",
+    "for key in hybrid:\n",
+    "    print(hybrid_dfs[key].shape)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n",
+      "date     object\n",
+      "nav     float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "temp_df = equity_dfs"
+    "for key in equity:\n",
+    "    print(equity_dfs[key].dtypes)\n",
+    "for key in debt:\n",
+    "    print(debt_dfs[key].dtypes)\n",
+    "for key in hybrid:\n",
+    "    print(hybrid_dfs[key].dtypes)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\3706023477.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n"
      ]
     }
    ],
    "source": [
-    "for fund in equity:\n",
-    "    temp_df[fund][\"date\"] = pd.to_datetime(temp_df[fund][\"date\"])"
+    "for key in equity:\n",
+    "    equity_dfs[key][\"date\"] = pd.to_datetime(equity_dfs[key][\"date\"])\n",
+    "for key in debt:\n",
+    "    debt_dfs[key][\"date\"] = pd.to_datetime(debt_dfs[key][\"date\"])\n",
+    "for key in hybrid:\n",
+    "    hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n"
    ]
   },
   {
