--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,29 +130,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for key in equity:\n",
     "    equity_dfs[key].reset_index(inplace=True)\n",
     "    equity_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
-    "    equity_dfs[key].dropna()\n",
+    "    \n",
     "\n",
     "for key in debt:\n",
     "    debt_dfs[key].reset_index(inplace=True)\n",
     "    debt_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
-    "    debt_dfs[key].dropna()\n",
+    "    \n",
     "\n",
     "for key in hybrid:\n",
     "    hybrid_dfs[key].reset_index(inplace=True)\n",
     "    hybrid_dfs[key].drop(columns=\"dayChange\", inplace=True)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in equity:\n",
+    "    equity_dfs[key].dropna()\n",
+    "\n",
+    "for key in debt:\n",
+    "    debt_dfs[key].dropna()\n",
+    "\n",
+    "for key in hybrid:\n",
     "    hybrid_dfs[key].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,29 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1512\\2216231024.py:6: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key in equity:\n",
-    "    equity_dfs[key][\"date\"] = pd.to_datetime(equity_dfs[key][\"date\"])\n",
+    "    equity_dfs[key][\"date\"] = pd.to_datetime(equity_dfs[key][\"date\"],dayfirst=True)\n",
     "for key in debt:\n",
-    "    debt_dfs[key][\"date\"] = pd.to_datetime(debt_dfs[key][\"date\"])\n",
+    "    debt_dfs[key][\"date\"] = pd.to_datetime(debt_dfs[key][\"date\"],dayfirst=True)\n",
     "for key in hybrid:\n",
-    "    hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"])\n"
+    "    hybrid_dfs[key][\"date\"] = pd.to_datetime(hybrid_dfs[key][\"date\"],dayfirst=True)\n"
    ]
   },
   {
