--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1143,10 +1143,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_df['Close_nrml'] = (\n",
+    "index_df['index_nrml'] = (\n",
     "        index_df['Close'] / index_df['Close'][0]\n",
     "    ) * 100\n",
-    "index_df['Close_nrml'] = index_df['Close_nrml'].round(2)\n",
+    "index_df['index_nrml'] = index_df['index_nrml'].round(2)\n",
     "index_df.rename(columns={'Date':'date'},inplace=True)"
    ]
   },
