--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -23,6 +23,7 @@
    ],
    "source": [
     "from mftool import Mftool\n",
+    "\n",
     "mf = Mftool()\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -679,17 +680,17 @@
     "for scheme_name in equity.values():\n",
     "    merge_equity[scheme_name] = (\n",
     "        merge_equity[scheme_name] / merge_equity[scheme_name][0]\n",
-    "    ) * 100 -100\n",
+    "    ) * 100 - 100\n",
     "\n",
     "for scheme_name in debt.values():\n",
     "    merge_debt[scheme_name] = (\n",
     "        merge_debt[scheme_name] / merge_debt[scheme_name][0]\n",
-    "    ) * 100 -100\n",
+    "    ) * 100 - 100\n",
     "\n",
     "for scheme_name in hybrid.values():\n",
     "    merge_hybrid[scheme_name] = (\n",
     "        merge_hybrid[scheme_name] / merge_hybrid[scheme_name][0]\n",
-    "    ) * 100 -100"
+    "    ) * 100 - 100"
    ]
   },
   {
@@ -1395,11 +1396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_df['index_nrml'] = (\n",
-    "        index_df['Close'] / index_df['Close'][0]\n",
-    "    ) * 100 -100\n",
-    "index_df['index_nrml'] = index_df['index_nrml'].round(2)\n",
-    "index_df.rename(columns={'Date':'date'},inplace=True)"
+    "index_df[\"index_nrml\"] = (index_df[\"Close\"] / index_df[\"Close\"][0]) * 100 - 100\n",
+    "index_df[\"index_nrml\"] = index_df[\"index_nrml\"].round(2)\n",
+    "index_df.rename(columns={\"Date\": \"date\"}, inplace=True)"
    ]
   },
   {
@@ -1537,7 +1536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_all_list=[merge_equity[['date','avg_equity']],merge_debt[['date','avg_debt']],merge_hybrid[['date','avg_hybrid']],index_df[['date','index_nrml']]]\n",
+    "merge_all_list=\n",
+    "[merge_equity[['date','avg_equity']],merge_debt[['date','avg_debt']],merge_hybrid[['date','avg_hybrid']],index_df[['date','index_nrml']]]\n",
     "\n",
     "result_df= reduce(lambda left,right: pd.merge(left,right,on=['date'],how='outer'),merge_all_list)"
    ]
@@ -1717,9 +1717,9 @@
     }
    ],
    "source": [
-    "result_df=result_df.dropna()\n",
-    "result_df.reset_index(drop=True,inplace=True)\n",
-    "result_df\n"
+    "result_df = result_df.dropna()\n",
+    "result_df.reset_index(drop=True, inplace=True)\n",
+    "result_df"
    ]
   },
   {
@@ -1739,7 +1739,7 @@
     }
    ],
    "source": [
-    "result_df.plot(x='date',y=['avg_equity','avg_debt','avg_hybrid','index_nrml'])\n",
+    "result_df.plot(x=\"date\", y=[\"avg_equity\", \"avg_debt\", \"avg_hybrid\", \"index_nrml\"])\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1750,7 +1750,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df.to_csv(\".//data_out//result.csv\")\n"
+    "result_df.to_csv(\".//data_out//result.csv\")"
    ]
   }
  ],
