--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1537,7 +1537,10 @@
    "outputs": [],
    "source": [
     "merge_all_list=\n",
-    "[merge_equity[['date','avg_equity']],merge_debt[['date','avg_debt']],merge_hybrid[['date','avg_hybrid']],index_df[['date','index_nrml']]]\n",
+    "[merge_equity[['date','avg_equity']],\n",
+    " merge_debt[['date','avg_debt']],\n",
+    " merge_hybrid[['date','avg_hybrid']],\n",
+    " index_df[['date','index_nrml']]]\n",
     "\n",
     "result_df= reduce(lambda left,right: pd.merge(left,right,on=['date'],how='outer'),merge_all_list)"
    ]
